src/alto-ui/Form/Typeahead/Typeahead.scss
@import '../../scss/inc';

.Typeahead__menu {
  max-height: 300px;
  overflow: auto;
  padding: 0;
}

.Typeahead__matched {
  font-weight: $font-weight-bold;
}

.Typeahead__item {
  cursor: pointer;
}

.Typeahead__custom-item {
  padding: $spacing-x-small ($spacing-x-small + $spacing-small);
  color: $coolgrey-40;
}

.Typeahead__custum-item--loading {
  display: flex;
  align-items: center;
}

.Typeahead__loading-spinner {
  margin-right: $spacing-x-small;
}

.Typeahead__load-more {
  margin: 0 $spacing-small $spacing-x-small;
}

.Typeahead__clear {
  margin-right: $spacing-x-small;
  padding-right: $spacing-x-small;
  border-right: 1px solid $coolgrey-20;
}

.Typeahead__caret {
  transition: color $transition;
  &--close {
    transform: rotate(180deg);
  }
}

.Typeahead__clear,
.Typeahead__caret {
  color: $coolgrey-40;

  &:hover {
    color: $coolgrey-80;
  }
}

.Typeahead__input .textfield__input {
  flex-basis: 0;
}

